# fonterator
#
# Copyright (c) 2018-2020 Jeron Aldaron Lau
# 
# Licensed under the Apache License, Version 2.0, <LICENSE-APACHE or
# https://apache.org/licenses/LICENSE-2.0>, or the Zlib License, <LICENSE-ZLIB
# or http://opensource.org/licenses/Zlib>, at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "fonterator"
version = "0.9.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
license = "Apache-2.0 OR Zlib"

description = "Load fonts as vector graphics in pure Rust with advanced text layout."
repository = "https://github.com/libcala/fonterator"
documentation = "https://docs.rs/fonterator"
homepage = "https://github.com/libcala/fonterator/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = ["gui", "rendering"]
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "libcala/fonterator" }
is-it-maintained-issue-resolution = { repository = "libcala/fonterator" }
is-it-maintained-open-issues = { repository = "libcala/fonterator" }
maintenance = { status = "actively-developed" }

[dependencies]
footile = "0.6"        # For vector path operations
unicode-script = "0.5" # For calculating text direction.

# For reading TTF/OTF files
[dependencies.ttf-parser]
version = "0.8"

[dev-dependencies]
svg = "0.8"
png_pong = "0.8"
pix = "0.13"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[[example]]
name = "directions"
path = "examples/directions.rs"
required-features = ["monospace-font"]

[[example]]
name = "image"
path = "examples/image.rs"
required-features = ["monospace-font"]

[[example]]
name = "main"
path = "examples/main.rs"
required-features = ["monospace-font"]

[[example]]
name = "raster"
path = "examples/raster.rs"
required-features = ["monospace-font"]

[features]
default = []
docs-rs = []
monospace-font = []
normal-font = []
