# Copyright © 2018-2022 The Fonterator Contributors.
#                                                                               
# Licensed under any of:                                                        
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)   
#  - MIT License (https://mit-license.org/)                                      
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt) 
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,              
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "fonterator"
version = "0.9.0"
license = "Apache-2.0 OR Zlib"

description = "Load fonts as vector graphics in pure Rust with advanced text layout."
repository = "https://github.com/ardaku/fonterator"
documentation = "https://docs.rs/fonterator"
homepage = "https://github.com/ardaku/fonterator/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = ["gui", "rendering"]
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
readme = "README.md"
edition = "2018"

[dependencies]
footile = "0.7"        # For vector path operations
unicode-script = "0.5" # For calculating text direction.
ttf-parser = "0.15"    # For reading TTF/OTF files
rustybuzz = "0.5"      # For text shaping

[dev-dependencies]
svg = "0.10"
png_pong = "0.8"
pix = "0.13"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[[example]]
name = "directions"
path = "examples/directions.rs"
required-features = ["monospace-font"]

[[example]]
name = "image"
path = "examples/image.rs"
required-features = ["monospace-font"]

[[example]]
name = "main"
path = "examples/main.rs"
required-features = ["monospace-font"]

[[example]]
name = "raster"
path = "examples/raster.rs"
required-features = ["monospace-font"]

[features]
default = []
docs-rs = []
monospace-font = []
normal-font = []
