# Copyright © 2018-2022 The Fonterator Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt, 
# LICENSE_BOOST_1_0.txt, and LICENSE_MIT.txt).

[package]
name = "fonterator"
version = "0.9.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"

description = "Load fonts as vector graphics in pure Rust with advanced text layout."
repository = "https://github.com/ardaku/fonterator"
documentation = "https://docs.rs/fonterator"
homepage = "https://github.com/ardaku/fonterator/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = ["gui", "rendering"]
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
readme = "README.md"
edition = "2021"

[dependencies]
footile = "0.7"        # For vector path operations
pointy = "0.3"         # For footile (required)
rustybuzz = "0.6"      # For text shaping / reading TTF/OTF files
unicode-script = "0.5" # For calculating text direction.

[dependencies.zip]
version = "0.6"
optional = true

[dev-dependencies]
svg = "0.13"
png_pong = "0.8"
pix = "0.13"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["quantii-sans"]
quantii-sans = ["dep:zip"]
